--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,27 @@
+# Virtual Environment
+venv/
+.venv/
+env/
+
+# Python
 __pycache__/
 *.pyc
 *.pyo
 *.pyd
 .Python
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
 *.egg-info/
-.installed.cfg
 *.egg
-.env
-.venv
+
+# Output files (keep the folder, ignore generated content)
 output/*
 !output/.gitkeep
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
